# deno-argon2

./: Cargo.toml  README.md  deno.json
.github/workflows/: main.yml
benchmarks/: bench.ts  deno.json
cli/: deps.ts
cli/commands/: hash.ts  verify.ts
examples/: hash-with-options.ts  hash.ts  verify.ts  with-options.ts
lib/: common.ts  deps.ts  error.ts  internal.ts  mod.ts  testing.ts
native/: command.rs  lib.rs
tests/: lib.test.ts  testing.test.ts
