[package]
name = "deno-argon2"
version = "2.0.2"
authors = ["Felix <webmaster@schindlerfelix.de>", "Federico <code@fdionisi.me>"]
edition = "2018"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bytes = { version = "1.8.0", features = ["serde"] }
rust-argon2 = "2.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
