[package]
name = "deno-argon2"
version = "3.0.2"
authors = ["Felix <webmaster@schindlerfelix.de>", "Federico <code@fdionisi.me>"]
edition = "2018"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
bytes = { version = "1.10.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
